Got database connected, Made slight corrections to Scout classes, working on UpdateScoutTransaction and its associated GUIs

--- a/Basic Project Repository/dbConfig.ini
+++ b/Basic Project Repository/dbConfig.ini
@@ -1,4 +1,4 @@
-username=root
-password=mitra
-dbName=BankATM
-server=localhost
+username=atint2
+password=fkip!eIJ05v[sTIy
+dbName=spr25_csc429_atint2
+server=csdb.brockport.edu
